--- a/public_html/index.html
+++ b/public_html/index.html
@@ -1,10 +1,112 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html class="no-js" lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="utf-8">
+    <title>The History Of the Internet</title>
+    <meta name="description" content="This is an example of a meta description, This will often how up in the search results">
+
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css">
+    <link rel="stylesheet" href="css/style.css">
+
+    <!-- Examples Provided from Class-->
+    <style>
+        #primaryLinks {
+            height: 100px;
+            margin: 0px;
+            line-height: 100px;
+            width: 553px;
+            text-align: right;
+        }
+        #primaryLinks li {
+            display: inline;
+
+        }
+        #primaryLinks menu {
+            padding-top: 0px;
+            padding-left: 0px;
+            margin: 0px;
+        }
+
+        #logo{
+            float: left;
+            width: 367px;
+            height: 100px;
+
+        }
+
+        #wrapper{
+            width: 960px;
+            margin-left: auto;
+            margin-right: auto;
+        }
+        #logo img{
+            width: 200px;
+            height: auto;
+            float: left;
+        }
+
+        #primaryContent{
+            clear: both;
+            width: 553px;
+
+        }
+        #footer{
+            clear: both;
+            text-align: center;
+            line-height: 100px;
+        }
+
+        #topContent {
+            height: 100px;
+            line-heignt: 100px;
+        }
+
+        .clearFix{
+            clear: both;
+        }
+
+        .floatLeft{
+            float: left;
+        }
+
+    </style>
+    <meta name="theme-color" content="#fafafa">
 </head>
+
 <body>
-Hello World
+<!-- Adding examples from Class-->
+<div id="wrapper">
+    <div id="logo" class="floatLeft">
+        <img src= "images/logo.jpg" alt="Hey this is a Logo: The cookies of the internet by Kalexanderson is licensed under CC BY-NC-SA 2.0 "/>
+
+    </div>
+    <menu id="primaryLinks" class="floatLeft">
+        <li><a href="index.html">Home</a> </li>
+        <li><a href="about.html">About</a> </li>
+    </menu>
+
+    <div id="topContent" class="clearFix">
+        Something
+    </div>
+    <article id="primaryContent" class="floatLeft">
+        <h1>About Images</h1>
+        <h2>Types of Image Formats</h2>
+        <ul>
+            <li>PNG - Portable Network Graphic</li>
+        </ul>
+    </article>
+
+    <div id ="sideContent">
+
+        <img height="200px" width="200px" src="images/sample.jpg" alt="sample image it content: Computer Keyboard by BigOakFlickr is licensed under CC BY-SA 2.0 "/>
+    </div>
+    <footer id="footer" class="clearFix">
+
+        Sarah Voishnis&#169;
+    </footer>
+
+</div>
 </body>
+
 </html>
