Refined index.html with Project Template for screens - need to break down individual sections on other pages
-Issues with mobile screen
-Needs content information
-Cannot get logo to work

--- a/public_html/Home2.html
+++ b/public_html/Home2.html
@@ -1,65 +1,35 @@
 <!doctype html>
 <html class="no-js" lang="en">
-
 <head>
     <meta charset="utf-8">
     <title>The History Of the Internet</title>
+    <meta name="viewport" content="with=device-width, initial-scale=1.0">
     <meta name="description" content="This is an example of a meta description, This will often how up in the search results">
-
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css">
-    <link rel="stylesheet" href="css/temp.css">
-
-
-    <meta name="theme-color" content="#fafafa">
+    <link rel="stylesheet" href="CSS/Temp.css">
 </head>
-
 <body>
-<!-- Adding examples from Class-->
-<div id="header">
-    <div id="logo" class="image" >
-        <img src= "images/logo.png" alt="Hey this is a Logo"/>
+<section class ="header">
+<nav>
+    <a href="index.html"><img src="images/logo.png"></a>
+    <div class="nav-links">
+       <ul>
+           <li><a href="index.html">HOME</a></li>
+           <li><a href="People.html">PEOPLE</a></li>
+           <li><a href="Inventions.html">INVENTIONS</a></li>
+           <li><a href="Creation.html">CREATION</a></li>
+           <li><a href="Background.html">BACKGROUND</a></li>
+       </ul>
     </div>
-    <div class="menu">
-    <ul>
-        <li><a href="People.html" style="padding: 10px 20px;">People</a> </li>
-        <li><a href="Inventions.html" style="padding: 10px 20px;">Inventions</a> </li>
-        <li><a href="Creation.html" style="padding: 10px 20px;">Creation</a> </li>
-        <li> <a href="Background.html" style="padding: 10px 20px;">Background</a></li>
-        <li> <a href="Today.html" style="padding: 10px 20px;">Today</a></li>
+</nav>
 
-    </ul>
-</div>
-    <div id="topContent" class="clearFix">
-        Something
+    <div class="text-box">
+        <h1>THE HISTORY OF THE INTERNET</h1>
+        <p>A brief overview of important information to know about the Internet</p>
+        <a href="People.html">Start Learning</a>
+
     </div>
-
-
-
-    <article id="primaryContent" class="floatLeft">
-        <div class="embed-responsive embed-responsive-1">
-            <img src="images/network2.jpg" class="u-logo-image" id="Network">
-        </div>
-
-            <h5>Homework Assignment Z-Layout<br>
-            </h5>
-            <h2><b>&nbsp;How Does The Internet Work?</b>
-            </h2>
-            <h5>This Website Will Provide an Overview of Some Facts About The History Of The Internet:<br>
-            </h5>
-            <ul>
-                <li>What is the Internet?</li>
-                <li>How was the Internet Created?</li>
-                <li>Important Figures to Know</li>
-                <li>Key Inventions That Make the Internet Possible</li>
-                <li>The Modern Internet</li>
-            </ul>
-    </article>
-    <div id ="sideContent">
-        <img height="200px" width="200px" src="images/sample.jpg" alt="sample image it content: Computer Keyboard by BigOakFlickr is licensed under CC BY-SA 2.0 "/>
-    </div>
-    <footer id="footer" class="clearFix">
-        Sarah Voishnis&#169;
-    </footer>
-</div>
+</section>
 </body>
+
 </html>
