--- a/public_html/Today.html
+++ b/public_html/Today.html
@@ -2,7 +2,7 @@
 <html class="no-js" lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Creation</title>
+    <title>Today</title>
     <meta name="viewport" content="with=device-width, initial-scale=1.0">
     <meta name="description" content="This is an example of a meta description, This will often how up in the search results">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -30,8 +30,8 @@
     </nav>
 
     <div class="text-box">
-        <h1>WHERE DID THE INTERENT COME FROM?</h1>
-        <p>The Internet's Origin Story</p>
+        <h1>THE MODERN INTERNET</h1>
+        <p>A Quick Peek Into The Internet of Today</p>
         <a href="People.html"class="start-btn">Start Learning</a>
 
     </div>
