--- a/public_html/index.html
+++ b/public_html/index.html
@@ -23,6 +23,7 @@
                 <li><a href="Inventions.html">INVENTIONS</a></li>
                 <li><a href="Creation.html">CREATION</a></li>
                 <li><a href="Background.html">BACKGROUND</a></li>
+                <li><a href="Today.html">TODAY</a></li>
             </ul>
         </div>
         <i class="fa fa-bars" onclick="showMenu()"></i>
