Added Content to Section 6 - moving to People Tab fixed various bugs

--- a/public_html/Background.html
+++ b/public_html/Background.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" lang="en">
+<html class="no-js" lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="utf-8">
     <title>Background</title>
@@ -13,6 +13,9 @@
 </head>
 <body>
 <section class ="header">
+    <div class="header-text">
+        <li>IS-601 HW</li>
+    </div>
     <nav>
         <a href="index.html">   <!--<img src="images/logo.png">--></a>
         <div class="nav-links" id="navLinks">
@@ -30,7 +33,7 @@
     </nav>
 
     <div class="text-box">
-        <h1>THEORIES and METHODOLOGIES OF THE INTERENT</h1>
+        <h1>THEORIES & METHODOLOGIES OF THE INTERNET</h1>
         <p>The Building Principles of The Internet</p>
         <a href="People.html"class="start-btn">Start Learning</a>
 
@@ -116,6 +119,7 @@
     <h1> Fifth Section</h1>
     <a href=""class="start-btn">CLICK HERE TO LEARN MORE</a>
 </section>
+
 
 <!--Footer Section-->
 <section class="footer">
