--- a/public_html/Creation.html
+++ b/public_html/Creation.html
@@ -13,6 +13,9 @@
 </head>
 <body>
 <section class ="header">
+    <div class="header-text">
+        <li>IS-601 HW</li>
+    </div>
     <nav>
         <a href="index.html">   <!--<img src="images/logo.png">--></a>
         <div class="nav-links" id="navLinks">
