--- a/public_html/index.html
+++ b/public_html/index.html
@@ -13,8 +13,11 @@
 </head>
 <body>
 <section class ="header">
+    <div class="header-text">
+        <li><i>IS-601 HW</i></li>
+    </div>
     <nav>
-        <a href="index.html">   <!--<img src="images/logo.png">--></a>
+        <a href="index.html"></a>
         <div class="nav-links" id="navLinks">
             <i class="fa fa-times-circle" onclick="hideMenu()"></i>
             <ul>
@@ -30,6 +33,7 @@
     </nav>
 
     <div class="text-box">
+
         <h1>THE HISTORY OF THE INTERNET</h1>
         <p>A brief overview of important information to know about the Internet</p>
         <a href="People.html"class="start-btn">Start Learning</a>
@@ -37,50 +41,31 @@
     </div>
 </section>
 
-<section class="belowheader">
-    <h1> Next Section</h1>
-    <p>More Information</p>
-
-    <div class="row">
-        <div class="secondsection-col">
-            <h3>Test1</h3>
-            <p>sample</p>
-        </div>
-        <div class="secondsection-col">
-            <h3>Test2</h3>
-            <p>sample</p>
-        </div>
-        <div class="secondsection-col">
-            <h3>Test3</h3>
-            <p>sample</p>
-        </div>
-    </div>
-
-</section>
-
 <!-- Third Section-->
 
 <section class="thirdsection">
-    <h1> third Section</h1>
-    <p>More Information</p>
+    <h1>Miscellaneous Facts Of the Internet</h1>
+    <p>Hover over the images below for some Internet related facts:</p>
 
     <div class="row">
         <div class="thirdsection-col">
-            <img src="images/sample.jpg">
+            <img src="images/pexels-athena-2582937.jpg">
             <div class="layer">
-             <h3>Test1</h3>
+             <h3>Silicon Chip:<br><br><br>Founded by Intel Co-Founder<br>Gordon Moore<br></h3>
             </div>
         </div>
         <div class="thirdsection-col">
-            <img src="images/sample.jpg">
+            <img src="images/pexels-shvets-production-7191989.jpg">
             <div class="layer">
-                <h3>Test1</h3>
+                <h3> Encryption:<br><br><br>Public Key Cryptography was <br>
+                    developed by 3 mathematicians.<br><br>It is now considered<br> the lynchpin of secure online commerce.<br></h3>
             </div>
         </div>
             <div class="thirdsection-col">
-                <img src="images/sample.jpg">
+                <img src="images/pexels-josh-sorenson-1054397.jpg">
                 <div class="layer">
-                    <h3>Test1</h3>
+                    <h3>Moore’s Law:<br><br><br>The speed and power of integrated circuits doubles every 18 months
+                        <br><br>The industry lives by this law &<br> aims to make transistors smaller and smaller</h3>
                 </div>
             </div>
         </div>
@@ -89,7 +74,7 @@
 
 <!--Fourth Section-->
 <section class="fourthsection">
-    <h1> Fouth Section</h1>
+    <h1> Fourth Section</h1>
     <p>More Information</p>
     <div class="row">
         <div class="fourthsection-col">
@@ -117,16 +102,71 @@
     <a href=""class="start-btn">CLICK HERE TO LEARN MORE</a>
 </section>
 
+
+<!--Sixth Section-->
+<section class="sixthsection" id="fframe">
+    <h1>Accomplishments That Helped Make The Internet Possible<br><br></h1>
+    <div class="sixthsection-con">
+        <div class="sixthsection-row">
+             <div class="sixthsection-col">
+                 <ul class="infoList"></ul>
+                 <li>
+                     <h4>JCR Licklider</h4>
+                     <ul>
+                         <li> - “Father of Information Theory”
+                             <br>- Invented the mathematics or theoretical groundwork for a way that a message could self-correct itself and check if the rest of the message is correct.
+                             <br>- Rather than send one long message we send the in small portions.
+                             <br>- This was the functional theory for packet-switching
+                         </li>
+                     </ul>
+                 </li>
+                 <li>
+                     <h4>Robert Elien Kham</h4>
+                 <ul>
+                     <li> - Robert Elien Kham made the first hardware in 1965 – 1969 and sent the first packet using these self-correcting messages.
+                         <br> - ARPANET was a direct result of this technology that focused solving two of the main issues
+                         <br> - With circuit switching, if the wire was cut then there is no way to send the message over to confirm there was no loss of information or tampering.
+                         <br> - The desire to send data rather than just a voice.
+                         <br> - By 1972, the ARPANET composed of 37 companies including universities, research collaborators, and government labs.
+                     </li>
+                 </ul>
+                 </li>
+                 <li>
+                     <h4>Bill Gates</h4>
+                     <ul>
+                     <li>- Co-founder and CEO of Microsoft
+                         <br>- Bill Gates was able to commission an operating system for IBM from an electronics company and made it work on their computers
+                         <br>- Created the MSN – the Microsoft security network thought the internet was like a toll road
+                         <br>- Feared the growth of Netscape to change the foundation of the Internet where the browsers could hold the power
+                     </li>
+                     </ul>
+                 </li>
+                 <li>
+                     <h4>Al Gore</h4>
+                     <ul>
+                     <li>- Senator and sponsor of the bill that made the ARPANET public
+                         <br>- The Internet became available in August 6th, 1991
+                        </li>
+                     </ul>
+                 </li>
+                 </ul>
+             </div>
+        </div>
+    </div>
+       <!-- <img src="images/technology-networking.jpg"> -->
+    </div>
+
+
+</section>
+
 <!--Footer Section-->
 <section class="footer">
-    <h4> Footer</h4>
-    <p>CLICK HERE TO LEARN MORE</p>
+    <h4>Footer</h4>
+    <p>Created By, <br>Sarah Voishnis</br></p>
 </section>
 
 
-
-
-<!--Javascript for Toggling Menu for Small Screens-->
+<!--BROKEN!!!!!!! - Javascript for Toggling Menu for Small Screens-->
 <script>
     var navLinks = document.getElementByID(navLinks);
 
