Final Adjustments for Z and F layout assignments

--- a/public_html/People.html
+++ b/public_html/People.html
@@ -33,9 +33,9 @@
   </nav>
 
   <div class="text-box">
-    <h1>PEOPLE WHO MADE THE INTERENET POSSIBLE</h1>
+    <h1>PEOPLE WHO MADE THE INTERNET POSSIBLE</h1>
     <p>A brief overview of important people who had a huge influence on the creation of the Internet</p>
-    <a href="People.html"class="start-btn">Start Learning</a>
+    <a href="Inventions.html"class="start-btn">Next Section</a>
 
   </div>
 </section>
@@ -92,21 +92,35 @@
   <!-- <img src="images/technology-networking.jpg"> -->
   </div>
 </section>
-
-<!--Fifth Section-->
-<section class="fifthsection">
-  <h1> Fifth Section</h1>
-  <a href=""class="start-btn">CLICK HERE TO LEARN MORE</a>
+<!--Fourth Section-->
+<section class="fourthsection">
+  <h1>GROUPS OF PEOPLE</h1>
+  <p>Several accomplishments come from larger entities and not just individuals</p>
+  <div class="row">
+    <div class="fourthsection-col">
+      <img src="images/pexels-nothing-ahead-4567339.jpg">
+      <h3>Microsoft</h3>
+      <p>More that half of all business now use windows operating systems</p>
+    </div>
+    <div class="fourthsection-col">
+      <img src="images/pexels-ricardo-esquivel-3370333.jpg">
+      <h3>Apple</h3>
+      <p>Created the first personal computer</p>
+    </div>
+    <div class="fourthsection-col">
+      <img src="images/pexels-laura-tancredi-7078022.jpg">
+      <h3>US Government</h3>
+      <p>Contributes towards laws and regulations</p>
+    </div>
+  </div>
+  </div>
 </section>
-
 <!--Footer Section-->
 <section class="footer">
-  <h4>Footer</h4>
   <p>Created By, <br>Sarah Voishnis</br></p>
 </section>
 
 
 
 </body>
-
 </html>
