--- a/public_html/Today.html
+++ b/public_html/Today.html
@@ -40,50 +40,31 @@
     </div>
 </section>
 
-<section class="belowheader">
-    <h1> Next Section</h1>
-    <p>More Information</p>
-
-    <div class="row">
-        <div class="secondsection-col">
-            <h3>Test1</h3>
-            <p>sample</p>
-        </div>
-        <div class="secondsection-col">
-            <h3>Test2</h3>
-            <p>sample</p>
-        </div>
-        <div class="secondsection-col">
-            <h3>Test3</h3>
-            <p>sample</p>
-        </div>
-    </div>
-
-</section>
-
 <!-- Third Section-->
 
 <section class="thirdsection">
-    <h1> third Section</h1>
-    <p>More Information</p>
+    <h1>Miscellaneous Facts Of the Internet</h1>
+    <p>Hover over the images below for some Internet related facts:</p>
 
     <div class="row">
         <div class="thirdsection-col">
-            <img src="images/sample.jpg">
+            <img src="images/pexels-athena-2582937.jpg">
             <div class="layer">
-                <h3>Test1</h3>
+                <h3>Silicon Chip:<br><br><br>Founded by Intel Co-Founder<br>Gordon Moore<br></h3>
             </div>
         </div>
         <div class="thirdsection-col">
-            <img src="images/sample.jpg">
+            <img src="images/pexels-shvets-production-7191989.jpg">
             <div class="layer">
-                <h3>Test1</h3>
+                <h3> Encryption:<br><br><br>Public Key Cryptography was <br>
+                    developed by 3 mathematicians.<br><br>It is now considered<br> the lynchpin of secure online commerce.<br></h3>
             </div>
         </div>
         <div class="thirdsection-col">
-            <img src="images/sample.jpg">
+            <img src="images/pexels-josh-sorenson-1054397.jpg">
             <div class="layer">
-                <h3>Test1</h3>
+                <h3>Moore’s Law:<br><br><br>The speed and power of integrated circuits doubles every 18 months
+                    <br><br>The industry lives by this law &<br> aims to make transistors smaller and smaller</h3>
             </div>
         </div>
     </div>
@@ -92,7 +73,7 @@
 
 <!--Fourth Section-->
 <section class="fourthsection">
-    <h1> Fouth Section</h1>
+    <h1> Fourth Section</h1>
     <p>More Information</p>
     <div class="row">
         <div class="fourthsection-col">
@@ -119,27 +100,5 @@
     <h1> Fifth Section</h1>
     <a href=""class="start-btn">CLICK HERE TO LEARN MORE</a>
 </section>
-
-<!--Footer Section-->
-<section class="footer">
-    <h4> Footer</h4>
-    <p>CLICK HERE TO LEARN MORE</p>
-</section>
-
-
-
-
-<!--Javascript for Toggling Menu for Small Screens-->
-<script>
-    var navLinks = document.getElementByID(navLinks);
-
-    function showMenu(){
-        navLinks.style.right="0";
-    }
-    function hideMenu(){
-        navLinks.style.right="200px";
-    }
-</script>
 </body>
-
 </html>
