--- a/public_html/Creation.html
+++ b/public_html/Creation.html
@@ -35,111 +35,91 @@
     <div class="text-box">
         <h1>WHERE DID THE INTERENT COME FROM?</h1>
         <p>The Internet's Origin Story</p>
-        <a href="People.html"class="start-btn">Start Learning</a>
+        <a href="Background.html"class="start-btn">Next Section</a>
 
     </div>
 </section>
-
-<section class="belowheader">
-    <h1> Next Section</h1>
-    <p>More Information</p>
-
-    <div class="row">
-        <div class="secondsection-col">
-            <h3>Test1</h3>
-            <p>sample</p>
-        </div>
-        <div class="secondsection-col">
-            <h3>Test2</h3>
-            <p>sample</p>
-        </div>
-        <div class="secondsection-col">
-            <h3>Test3</h3>
-            <p>sample</p>
+<!--Sixth Section-->
+<section class="sixthsection" id="fframe">
+    <h1>Accomplishments That Helped Make The Internet Possible<br><br></h1>
+    <div class="sixthsection-con">
+        <div class="sixthsection-row">
+            <div class="sixthsection-col">
+                <ul class="infoList"></ul>
+                <li>
+                    <h4>JCR Licklider</h4>
+                    <ul>
+                        <li> - “Father of Information Theory”
+                            <br>- Invented the mathematics or theoretical groundwork for a way that a message could self-correct itself and check if the rest of the message is correct.
+                            <br>- Rather than send one long message we send the in small portions.
+                            <br>- This was the functional theory for packet-switching
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    <h4>Robert Elien Kham</h4>
+                    <ul>
+                        <li> - Robert Elien Kham made the first hardware in 1965 – 1969 and sent the first packet using these self-correcting messages.
+                            <br> - ARPANET was a direct result of this technology that focused solving two of the main issues
+                            <br> - With circuit switching, if the wire was cut then there is no way to send the message over to confirm there was no loss of information or tampering.
+                            <br> - The desire to send data rather than just a voice.
+                            <br> - By 1972, the ARPANET composed of 37 companies including universities, research collaborators, and government labs.
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    <h4>Bill Gates</h4>
+                    <ul>
+                        <li>- Co-founder and CEO of Microsoft
+                            <br>- Bill Gates was able to commission an operating system for IBM from an electronics company and made it work on their computers
+                            <br>- Created the MSN – the Microsoft security network thought the internet was like a toll road
+                            <br>- Feared the growth of Netscape to change the foundation of the Internet where the browsers could hold the power
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    <h4>Al Gore</h4>
+                    <ul>
+                        <li>- Senator and sponsor of the bill that made the ARPANET public
+                            <br>- The Internet became available in August 6th, 1991
+                        </li>
+                    </ul>
+                </li>
+                </ul>
+            </div>
         </div>
     </div>
-
+    <!-- <img src="images/technology-networking.jpg"> -->
+    </div>
 </section>
-
-<!-- Third Section-->
-
-<section class="thirdsection">
-    <h1> third Section</h1>
-    <p>More Information</p>
-
-    <div class="row">
-        <div class="thirdsection-col">
-            <img src="images/sample.jpg">
-            <div class="layer">
-                <h3>Test1</h3>
-            </div>
-        </div>
-        <div class="thirdsection-col">
-            <img src="images/sample.jpg">
-            <div class="layer">
-                <h3>Test1</h3>
-            </div>
-        </div>
-        <div class="thirdsection-col">
-            <img src="images/sample.jpg">
-            <div class="layer">
-                <h3>Test1</h3>
-            </div>
-        </div>
-    </div>
-    </div>
-</section>
-
 <!--Fourth Section-->
 <section class="fourthsection">
-    <h1> Fouth Section</h1>
-    <p>More Information</p>
+    <h1>COMPANIES</h1>
+    <p>Several accomplishments come from businesses and not just individuals</p>
     <div class="row">
         <div class="fourthsection-col">
-            <img src="images/sample.jpg">
-            <h3>Test1</h3>
-            <p> Sample text displaying here</p>
+            <img src="images/pexels-nothing-ahead-4567339.jpg">
+            <h3>Microsoft</h3>
+            <p>More that half of all business now use windows operating systems</p>
         </div>
         <div class="fourthsection-col">
-            <img src="images/sample.jpg">
-            <h3>Test2</h3>
-            <p> Sample text displaying here</p>
+            <img src="images/pexels-ricardo-esquivel-3370333.jpg">
+            <h3>Apple</h3>
+            <p>Created the first personal computer</p>
         </div>
         <div class="fourthsection-col">
-            <img src="images/sample.jpg">
-            <h3>Test3</h3>
-            <p> Sample text displaying here</p>
+            <img src="images/pexels-laura-tancredi-7078022.jpg">
+            <h3>US Government</h3>
+            <p>Contributes towards laws and regulations</p>
         </div>
     </div>
     </div>
 </section>
-
-<!--Fifth Section-->
-<section class="fifthsection">
-    <h1> Fifth Section</h1>
-    <a href=""class="start-btn">CLICK HERE TO LEARN MORE</a>
-</section>
-
 <!--Footer Section-->
 <section class="footer">
-    <h4> Footer</h4>
-    <p>CLICK HERE TO LEARN MORE</p>
+    <p>Created By, <br>Sarah Voishnis</br></p>
 </section>
 
-
-
-
-<!--Javascript for Toggling Menu for Small Screens-->
-<script>
-    var navLinks = document.getElementByID(navLinks);
-
-    function showMenu(){
-        navLinks.style.right="0";
-    }
-    function hideMenu(){
-        navLinks.style.right="200px";
-    }
-</script>
 </body>
 
 </html>
